Add cards, imgs and clues

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div>
                     <ul>
                         <li><a href="#">Jeux</a></li>
-                        <li><a href="#planets">Planètes</a></li>
+                        <li><a href="#planets">Axes</a></li>
                         <li><a href="#">Notre équipe</a></li>
                         <li><a href="#">Jouer</a></li>
                     </ul>
@@ -30,7 +30,7 @@
                 Découvrez l'univers du digital 
             </h1>
             <p>
-                abjbshigaysgyagys safsyfastyftfat satsftafstfasfatfstfsyaf cftafst hsafstafsfa sygsygayg fagtfs
+                Suite à l'obtention de son baccalauréat spatial, un étudiant perdu dans l'espace vole de planète en planète pour trouver l'accès permettant de se rendre sur une mystérieuse étoile...
             </p>
             <a class="btn" href="">Jouer</a>
         </div>
@@ -39,13 +39,13 @@
         <div class="video"></div>
     </div>
     <div id="planets">
-        <h2>Découvrez les planètes</h2>
+        <h2>Découvrez les axes</h2>
         <div class="planets-ctn">
             <div class="card">
-                <img src="img/map-crea-1 (1).png" alt="">
+                <img src="img/map-crea-transparent.png" alt="">
                 <div>
                     <p>Création et design</p>
-                    <p>Bla bla bla bla bla bla bla bla</p>
+                    <p>Infographie, création visuelle, motion design, UX/UI...</p>
                 </div>
                 <a class="btn" href="planet-CREA.html">Découvrir</a>
             </div>
@@ -53,15 +53,15 @@
                 <img src="img/map-3d-transparent.png" alt="">
                 <div>
                     <p>Animation 3D</p>
-                    <p>Bla bla bla bla bla bla bla bla</p>
+                    <p>Effets spéciaux, séries d'animation, jeux vidéo...</p>
                 </div>
                 <a class="btn" href="planet-3D.html">Découvrir</a>
             </div>
             <div class="card">
-                <img src="img/map-crea-1 (1).png" alt="">
+                <img src="img/map-jv-transparent.png" alt="">
                 <div>
-                    <p>Création & Design</p>
-                    <p>Bla bla bla bla bla bla bla bla</p>
+                    <p>Jeux vidéo</p>
+                    <p>Game Art 2D/3D, Game programming, Game Design...</p>
                 </div>
                 <a class="btn" href="planet-JV.html">Découvrir</a>
             </div>
