--- a/planet-3D.html
+++ b/planet-3D.html
@@ -15,7 +15,7 @@
             <div>
                 <ul>
                     <li><a href="#">Jeux</a></li>
-                    <li><a href="index.html#planets">Planètes</a></li>
+                    <li><a href="index.html#planets">Axes</a></li>
                     <li><a href="#">Notre équipe</a></li>
                     <li><a href="#">Jouer</a></li>
                 </ul>
@@ -23,18 +23,58 @@
         </nav>
     </header>
     <div class="hero-section-planet">
+        <img src="img/planet-blue.png" alt="planet blue" class="planet">
         <div class="left">
             <h1>Planète Animation 3D</h1>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                Suspendisse quis ullamcorper mi. Sed nec nunc velit.
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                Suspendisse quis ullamcorper mi. Sed nec nunc velit.
+                A travers cet univers vous pourrez y construire le vôtre. Pour les amateurs de 3D, modélisez vos pensées et choisissez votre angle. Tout est une question de perspective !
             </p>
             <a href="">Voir les indices</a>
         </div>
         <div class="right">
-            <img src="img/map-3d-transparent.png" alt="">
+            <img src="img/map-3d-transparent.png" alt="map of the 3D axis">
+        </div>
+    </div>
+    <div id="cards">
+        <img src="img/planet-pink.png" alt="planet pink" class="planet">
+        <h2>Indices</h2>
+        <div class="all-cards">
+            <div class="card">
+                <div class="content">
+                  <div class="front">
+                    Enigme 1
+                  </div>
+                  <div class="back">
+                    <div>
+                        <p>Quelle drôle d'énigme sur le panneau.</p>
+                        <p>Ces formes ne vous rappellent rien ?</p>
+                    </div>
+                  </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="content">
+                  <div class="front">
+                    Enigme 2
+                  </div>
+                  <div class="back">
+                    <p>
+                        Avez-vous trouvez le rébus ?
+                    </p>
+                  </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="content">
+                  <div class="front">
+                    Enigme 3
+                  </div>
+                  <div class="back">
+                    <p>Avez-vous fait le tour de la planète ?</p>
+                    <p>C’est renversant !</p>
+                  </div>
+                </div>
+            </div>
         </div>
     </div>    
 </body>
