--- a/planet-CREA.html
+++ b/planet-CREA.html
@@ -15,7 +15,7 @@
             <div>
                 <ul>
                     <li><a href="index.html">Jeux</a></li>
-                    <li><a href="index.html#planets">Planètes</a></li>
+                    <li><a href="index.html#planets">Axes</a></li>
                     <li><a href="index.html">Notre équipe</a></li>
                     <li><a href="index.html">Jouer</a></li>
                 </ul>
@@ -23,24 +23,26 @@
         </nav>
     </header>
     <div class="hero-section-planet">
+        <img src="img/planet-blue.png" alt="planet blue" class="planet">
         <div class="left">
             <h1>Planète Création et design</h1>
             <p>
                 Petite planète colorée, vous y découvrirez un univers varié laissant libre cours à votre imagination. Faites place à la créativité et la conception.
             </p>
-            <a href="">Voir les indices</a>
+            <a href="#cards">Voir les indices</a>
         </div>
         <div class="right">
-            <img src="img/map-crea-1 (1).png" alt="">
+            <img src="img/map-crea-transparent.png" alt="map of the creative axis">
         </div>
     </div>    
-    <div class="cards">
+    <div id="cards">
         <h2>Indices</h2>
+        <img src="img/planet-pink.png" alt="planet pink" class="planet">
         <div class="all-cards">
             <div class="card">
                 <div class="content">
                   <div class="front">
-                    1
+                    Enigme 1
                   </div>
                   <div class="back">
                     <div>
@@ -53,7 +55,7 @@
             <div class="card">
                 <div class="content">
                   <div class="front">
-                    2
+                    Enigme 2
                   </div>
                   <div class="back">
                     <p>
@@ -65,7 +67,7 @@
             <div class="card">
                 <div class="content">
                   <div class="front">
-                    3
+                    Enigme 3
                   </div>
                   <div class="back">
                     Quelque chose doit se cacher sur cet ordi.
