--- a/planet-JV.html
+++ b/planet-JV.html
@@ -15,7 +15,7 @@
             <div>
                 <ul>
                     <li><a href="index.html">Jeux</a></li>
-                    <li><a href="index.html#planets">Planètes</a></li>
+                    <li><a href="index.html#planets">Axes</a></li>
                     <li><a href="index.html">Notre équipe</a></li>
                     <li><a href="index.html">Jouer</a></li>
                 </ul>
@@ -23,19 +23,56 @@
         </nav>
     </header>
     <div class="hero-section-planet">
+        <img src="img/planet-blue.png" alt="planet blue" class="planet">
         <div class="left">
             <h1>Planète Jeux vidéo</h1>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                Suspendisse quis ullamcorper mi. Sed nec nunc velit.
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                Suspendisse quis ullamcorper mi. Sed nec nunc velit.
+                Découvrez un univers où se mélangent le réel et le virtuel. Évoluez dans un monde fantastique où vous saurez vous amuser. Vous passionnés, oserez-vous vous y aventurer ?
             </p>
             <a href="">Voir les indices</a>
         </div>
         <div class="right">
-            <img src="img/map-crea-1 (1).png" alt="">
+            <img src="img/map-jv-transparent.png" alt="map of the video game axis">
         </div>
-    </div>    
+    </div> 
+    <div id="cards">
+        <img src="img/planet-pink.png" alt="planet pink" class="planet">
+        <h2>Indices</h2>
+        <div class="all-cards">
+            <div class="card">
+                <div class="content">
+                  <div class="front">
+                    Enigme 1
+                  </div>
+                  <div class="back">
+                    <div>
+                        <p>Au secours !  Des vaisseaux ennemis nous attaquent !</p>
+                        <p>Ah non, ce n’est qu’un jeu…</p>
+                    </div>
+                  </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="content">
+                  <div class="front">
+                    Enigme 2
+                  </div>
+                  <div class="back">
+                    Quelqu’un a dû laisser tomber des pièces…
+                  </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="content">
+                  <div class="front">
+                    Enigme 3
+                  </div>
+                  <div class="back">
+                    Jouons aux dés !
+                  </div>
+                </div>
+            </div>
+        </div>
+    </div>   
 </body>
 </html>
