--- a/planet-3D.html
+++ b/planet-3D.html
@@ -29,7 +29,7 @@
             <p>
                 A travers cet univers vous pourrez y construire le vôtre. Pour les amateurs de 3D, modélisez vos pensées et choisissez votre angle. Tout est une question de perspective !
             </p>
-            <a href="">Voir les indices</a>
+            <a href="#cards">Voir les indices</a>
         </div>
         <div class="right">
             <img src="img/map-3d-transparent.png" alt="map of the 3D axis">
