--- a/planet-JV.html
+++ b/planet-JV.html
@@ -29,7 +29,7 @@
             <p>
                 Découvrez un univers où se mélangent le réel et le virtuel. Évoluez dans un monde fantastique où vous saurez vous amuser. Vous passionnés, oserez-vous vous y aventurer ?
             </p>
-            <a href="">Voir les indices</a>
+            <a href="#cards">Voir les indices</a>
         </div>
         <div class="right">
             <img src="img/map-jv-transparent.png" alt="map of the video game axis">
