Add team section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <li><a href="#">Jeux</a></li>
                         <li><a href="#planets">Axes</a></li>
                         <li><a href="#">Notre équipe</a></li>
-                        <li><a href="#">Jouer</a></li>
+                        <li><a href="https://growparishmeridian.itch.io/misplaced">Jouer</a></li>
                     </ul>
                 </div>
             </nav>
@@ -30,9 +30,9 @@
                 Découvrez l'univers du digital 
             </h1>
             <p>
-                Suite à l'obtention de son baccalauréat spatial, un étudiant perdu dans l'espace vole de planète en planète pour trouver l'accès permettant de se rendre sur une mystérieuse étoile...
+                Suite à l'obtention de son baccalauréat spatial, un étudiant perdu dans l'espace vole de planète en planète pour trouver l'accès permettant de se rendre sur un mystérieux astre...
             </p>
-            <a class="btn" href="">Jouer</a>
+            <a class="btn" href="https://growparishmeridian.itch.io/misplaced">Jouer</a>
         </div>
     </div>
     <div class="game-pres">
@@ -64,6 +64,56 @@
                     <p>Game Art 2D/3D, Game programming, Game Design...</p>
                 </div>
                 <a class="btn" href="planet-JV.html">Découvrir</a>
+            </div>
+        </div>
+    </div>
+    <div class="team">
+        <h2>Our team</h2>
+        <div class="team-ctn">
+            <div class="team-card">
+                <img class="img-team" src="img/fond-final.png" alt="image of student">
+                <p>Quentin Drouet</p>
+                <p>Coding and Digital Innovation</p>
+            </div>
+            <div class="team-card">
+                <img class="img-team" src="img/team/charlotte.jpeg" alt="image of student">
+                <p>Charlotte Moriceau</p>
+                <p>Création et design</p>
+            </div>
+            <div class="team-card">
+                <img class="img-team" src="img/team/ema.jpeg" alt="image of student">
+                <p>Ema Gillard-Santini</p>
+                <p>Création et design</p>
+            </div>
+            <div class="team-card">
+                <img class="img-team" src="img/team/mathieu.jpeg" alt="image of student">
+                <p>Mathieu Bouninneau</p>
+                <p>Communication Digital et e-business</p>
+            </div>
+            <div class="team-card">
+                <img class="img-team" src="img/team/abdel.jpeg" alt="image of student">
+                <p>Abdelghani Ennadif</p>
+                <p>Communication Digital et e-business</p>
+            </div>
+            <div class="team-card">
+                <img class="img-team" src="img/team/marwan.jpeg" alt="image of student">
+                <p>Marwan Tournant</p>
+                <p>Jeux-vidéo</p>
+            </div>
+            <div class="team-card">
+                <img class="img-team" src="img/team/thomas.jpeg" alt="image of student">
+                <p>Thomas Raulin</p>
+                <p>Jeux-vidéo</p>
+            </div>
+            <div class="team-card">
+                <img class="img-team" src="img/team/gaetan.png" alt="image of student">
+                <p>Gaëtan Perré</p>
+                <p>Jeux-vidéo</p>
+            </div>
+            <div class="team-card">
+                <img class="img-team" src="img/team/sarah.jpeg" alt="image of student">
+                <p>Sarah Contrepoids</p>
+                <p>Animation 3D</p>
             </div>
         </div>
     </div>
