--- a/planet-3D.html
+++ b/planet-3D.html
@@ -17,7 +17,7 @@
                     <li><a href="#">Jeux</a></li>
                     <li><a href="index.html#planets">Axes</a></li>
                     <li><a href="#">Notre équipe</a></li>
-                    <li><a href="#">Jouer</a></li>
+                    <li><a href="https://growparishmeridian.itch.io/misplaced">Jouer</a></li>
                 </ul>
             </div>
         </nav>
