--- a/planet-JV.html
+++ b/planet-JV.html
@@ -17,7 +17,7 @@
                     <li><a href="index.html">Jeux</a></li>
                     <li><a href="index.html#planets">Axes</a></li>
                     <li><a href="index.html">Notre équipe</a></li>
-                    <li><a href="index.html">Jouer</a></li>
+                    <li><a href="https://growparishmeridian.itch.io/misplaced">Jouer</a></li>
                 </ul>
             </div>
         </nav>
