Fix images team

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <li><a href="#">Jeux</a></li>
                         <li><a href="#planets">Axes</a></li>
                         <li><a href="#">Notre équipe</a></li>
-                        <li><a href="https://growparishmeridian.itch.io/misplaced">Jouer</a></li>
+                        <li><a href="https://growparishmeridian.itch.io/misplaced" target="_blank" rel="noopener noreferrer">Jouer</a></li>
                     </ul>
                 </div>
             </nav>
@@ -27,19 +27,20 @@
         <div class="cta">
            <!--  <img src="img/logo-no-effect.png" alt="logo misplaced with effects"> -->
             <h1>
-                Découvrez l'univers du digital 
+                Découvre l'univers du digital 
             </h1>
             <p>
-                Suite à l'obtention de son baccalauréat spatial, un étudiant perdu dans l'espace vole de planète en planète pour trouver l'accès permettant de se rendre sur un mystérieux astre...
+                Tu viens d'avoir ton BAC spatial ? <br>
+                Embarque sur l'IIM starship et navigue de planète en planète pour trouver ta voie !
             </p>
-            <a class="btn" href="https://growparishmeridian.itch.io/misplaced">Jouer</a>
+            <a class="btn" href="https://growparishmeridian.itch.io/misplaced" target="_blank" rel="noopener noreferrer">Jouer</a>
         </div>
     </div>
     <div class="game-pres">
         <div class="video"></div>
     </div>
     <div id="planets">
-        <h2>Découvrez les axes</h2>
+        <h2>Les axes de la galaxie IIM</h2>
         <div class="planets-ctn">
             <div class="card">
                 <img src="img/map-crea-transparent.png" alt="">
@@ -71,7 +72,7 @@
         <h2>Our team</h2>
         <div class="team-ctn">
             <div class="team-card">
-                <img class="img-team" src="img/fond-final.png" alt="image of student">
+                <img class="img-team" src="img/team/quentin.jpeg" alt="image of student">
                 <p>Quentin Drouet</p>
                 <p>Coding and Digital Innovation</p>
             </div>
