--- a/planet-3D.html
+++ b/planet-3D.html
@@ -55,7 +55,7 @@
             <div class="card">
                 <div class="content">
                   <div class="front">
-                    Enigme 2
+                    <p>Enigme 2</p>
                   </div>
                   <div class="back">
                     <p>
