--- a/planet-CREA.html
+++ b/planet-CREA.html
@@ -55,7 +55,7 @@
             <div class="card">
                 <div class="content">
                   <div class="front">
-                    Enigme 2
+                    <p>Enigme 2</p>
                   </div>
                   <div class="back">
                     <p>
@@ -67,10 +67,10 @@
             <div class="card">
                 <div class="content">
                   <div class="front">
-                    Enigme 3
+                    <p>Enigme 3</p>
                   </div>
                   <div class="back">
-                    Quelque chose doit se cacher sur cet ordi.
+                    <p>Quelque chose doit se cacher sur cet ordi.</p>
                   </div>
                 </div>
             </div>
