--- a/planet-JV.html
+++ b/planet-JV.html
@@ -58,7 +58,7 @@
                     Enigme 2
                   </div>
                   <div class="back">
-                    Quelqu’un a dû laisser tomber des pièces…
+                    <p>Quelqu’un a dû laisser tomber des pièces…</p>
                   </div>
                 </div>
             </div>
@@ -68,7 +68,7 @@
                     Enigme 3
                   </div>
                   <div class="back">
-                    Jouons aux dés !
+                    <p>Jouons aux dés !</p>
                   </div>
                 </div>
             </div>
