Add responsive and opti code

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <ul>
                         <li><a href="#">Jeux</a></li>
                         <li><a href="#planets">Axes</a></li>
-                        <li><a href="#">Notre équipe</a></li>
+                        <li><a href="#team">Notre équipe</a></li>
                         <li><a href="https://growparishmeridian.itch.io/misplaced" target="_blank" rel="noopener noreferrer">Jouer</a></li>
                     </ul>
                 </div>
@@ -36,9 +36,18 @@
             <a class="btn" href="https://growparishmeridian.itch.io/misplaced" target="_blank" rel="noopener noreferrer">Jouer</a>
         </div>
     </div>
-    <div class="game-pres">
-        <div class="video"></div>
-    </div>
+    <div class="hero-section-planet">
+        <div class="left">
+            <h1>Trouve ton métier du digital</h1>
+            <p>
+                Parcours les axes métier de l'Institut de l'Internet et du Multimédia et résout les énigmes t'orienter dans le monde du digital !
+            </p>
+            <a href="#planets">Voir les axes</a>
+        </div>
+        <div class="right">
+            <img src="img/maps2.gif" alt="map of the creative axis">
+        </div>
+    </div>    
     <div id="planets">
         <h2>Les axes de la galaxie IIM</h2>
         <div class="planets-ctn">
@@ -68,7 +77,7 @@
             </div>
         </div>
     </div>
-    <div class="team">
+    <div id="team">
         <h2>Our team</h2>
         <div class="team-ctn">
             <div class="team-card">
