--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <a href="index.html"><img src="img/logo-no-effect.png" alt="logo misplaced with effects"></a>
                 <div>
                     <ul>
-                        <li><a href="#">Jeux</a></li>
+                        <li><a href="#game">Jeux</a></li>
                         <li><a href="#planets">Axes</a></li>
                         <li><a href="#team">Notre équipe</a></li>
                         <li><a href="https://growparishmeridian.itch.io/misplaced" target="_blank" rel="noopener noreferrer">Jouer</a></li>
@@ -36,7 +36,7 @@
             <a class="btn" href="https://growparishmeridian.itch.io/misplaced" target="_blank" rel="noopener noreferrer">Jouer</a>
         </div>
     </div>
-    <div class="hero-section-planet">
+    <div class="hero-section-planet" id="game">
         <div class="left">
             <h1>Trouve ton métier du digital</h1>
             <p>
@@ -45,14 +45,14 @@
             <a href="#planets">Voir les axes</a>
         </div>
         <div class="right">
-            <img src="img/maps2.gif" alt="map of the creative axis">
+            <img src="img/maps2.gif" alt="gif of all the maps">
         </div>
     </div>    
     <div id="planets">
         <h2>Les axes de la galaxie IIM</h2>
         <div class="planets-ctn">
             <div class="card">
-                <img src="img/map-crea-transparent.png" alt="">
+                <img src="img/map-crea-transparent.png" alt="map of the creative axis">
                 <div>
                     <p>Création et design</p>
                     <p>Infographie, création visuelle, motion design, UX/UI...</p>
@@ -60,7 +60,7 @@
                 <a class="btn" href="planet-CREA.html">Découvrir</a>
             </div>
             <div class="card">
-                <img src="img/map-3d-transparent.png" alt="">
+                <img src="img/map-3d-transparent.png" alt="map of the 3d axis">
                 <div>
                     <p>Animation 3D</p>
                     <p>Effets spéciaux, séries d'animation, jeux vidéo...</p>
@@ -68,7 +68,7 @@
                 <a class="btn" href="planet-3D.html">Découvrir</a>
             </div>
             <div class="card">
-                <img src="img/map-jv-transparent.png" alt="">
+                <img src="img/map-jv-transparent.png" alt="map of the video game axis">
                 <div>
                     <p>Jeux vidéo</p>
                     <p>Game Art 2D/3D, Game programming, Game Design...</p>
