--- a/planet-JV.html
+++ b/planet-JV.html
@@ -14,9 +14,9 @@
             <a href="index.html"><img src="img/logo-no-effect.png" alt="logo misplaced with effects"></a>
             <div>
                 <ul>
-                    <li><a href="index.html">Jeux</a></li>
+                    <li><a href="index.html#game">Jeux</a></li>
                     <li><a href="index.html#planets">Axes</a></li>
-                    <li><a href="index.html">Notre équipe</a></li>
+                    <li><a href="index.html#team">Notre équipe</a></li>
                     <li><a href="https://growparishmeridian.itch.io/misplaced">Jouer</a></li>
                 </ul>
             </div>
