--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="left">
             <h1>Trouve ton métier du digital</h1>
             <p>
-                Parcours les axes métier de l'Institut de l'Internet et du Multimédia et résout les énigmes t'orienter dans le monde du digital !
+                Parcours les axes métier de l'Institut de l'Internet et du Multimédia et résout les énigmes pour t'orienter dans le monde du digital !
             </p>
             <a href="#planets">Voir les axes</a>
         </div>
@@ -49,6 +49,7 @@
         </div>
     </div>    
     <div id="planets">
+        <img src="img/planet-orange.png" alt="planet blue" class="planet-homepage1">
         <h2>Les axes de la galaxie IIM</h2>
         <div class="planets-ctn">
             <div class="card">
@@ -78,6 +79,7 @@
         </div>
     </div>
     <div id="team">
+        <img src="img/planet-blue.png" alt="planet blue" class="planet-homepage2">
         <h2>Our team</h2>
         <div class="team-ctn">
             <div class="team-card">
@@ -98,7 +100,7 @@
             <div class="team-card">
                 <img class="img-team" src="img/team/mathieu.jpeg" alt="image of student">
                 <p>Mathieu Bouninneau</p>
-                <p>Communication Digital et e-business</p>
+                <p>Création et design</p>
             </div>
             <div class="team-card">
                 <img class="img-team" src="img/team/abdel.jpeg" alt="image of student">
@@ -108,7 +110,7 @@
             <div class="team-card">
                 <img class="img-team" src="img/team/marwan.jpeg" alt="image of student">
                 <p>Marwan Tournant</p>
-                <p>Jeux-vidéo</p>
+                <p>Communication Digital et e-business</p>
             </div>
             <div class="team-card">
                 <img class="img-team" src="img/team/thomas.jpeg" alt="image of student">
